# transports/http/payment_requests.go
@@ -35,7 +35,7 @@ func (p *paymentRequest) RegisterRoutes(g *echo.Group) {
 // @Failure 404 {object} payd.ClientError "returned if the paymentID has not been found"
 // @Failure 400 {object} payd.ClientError "returned if the user input is invalid, usually an issue with the paymentID"
 // @Failure 500 {string} string "returned if there is an unexpected internal error"
-// @Router /api/v1/payment/{paymentID} [GET].
+// @Router /payment/{paymentID} [GET].
 func (p *paymentRequest) get(c echo.Context) error {
 	var args payd.PaymentRequestArgs
 	if err := c.Bind(&args); err != nil {
