# transports/http/payments.go
@@ -34,7 +34,7 @@ func (p *payments) RegisterRoutes(g *echo.Group) {
 // @Failure 400 {object} payd.ClientError "returned if the invoiceID is empty or payment isn't valid"
 // @Failure 404 {object} payd.ClientError "returned if the invoiceID has not been found"
 // @Success 200
-// @Router /v1/payments/{invoiceID} [POST].
+// @Router /payments/{invoiceID} [POST].
 func (p *payments) create(e echo.Context) error {
 	var req dpp.Payment
 	if err := e.Bind(&req); err != nil {
