# transports/http/proofs.go
@@ -36,7 +36,7 @@ func (p *proofs) RegisterRoutes(g *echo.Group) {
 // @Param txid path string true "Transaction ID"
 // @Param body body envelope.JSONEnvelope true "JSON Envelope"
 // @Success 201
-// @Router /v1/proofs/{txid} [POST].
+// @Router /proofs/{txid} [POST].
 func (p *proofs) create(c echo.Context) error {
 	var req envelope.JSONEnvelope
 	if err := c.Bind(&req); err != nil {
